--- a/site/assets/4.3/scss/_player.scss
+++ b/site/assets/4.3/scss/_player.scss
@@ -1,3 +1,6 @@
+@use "../../../../scss/mixins/border";
+@use "../../../../scss/mixins/font-size";
+@use "../../../../scss/mixins/transition";
 // stylelint-disable declaration-no-important
 
 // TODO: Fix this file - bad layout and whatnot for now until after launch
@@ -129,7 +132,7 @@
     margin: 0;
     color: #222;
     background-color: #fff;
-    @include border-radius(.25rem);
+    @include border.border-radius(.25rem);
 
     .col-md-6 {
         padding-right: 0;
@@ -179,12 +182,12 @@
 .player-fulldisplay.player-inactive .player {
     visibility: hidden;
     opacity: 0;
-    @include transition(visibility 1s, opacity 1s);
+    @include transition.transition(visibility 1s, opacity 1s);
 }
 .player-fulldisplay.player-inactive.player-paused .player {
     visibility: visible;
     opacity: 1;
-    @include transition(all .15s);
+    @include transition.transition(all .15s);
 }
 
 .player-notime .player-time-current,
@@ -202,7 +205,7 @@
     margin-bottom: 20px;
     background-color: #f5f5f5;
     border: 1px solid #e3e3e3;
-    @include border-radius(.25rem);
+    @include border.border-radius(.25rem);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 .player-transcript-active {
@@ -233,7 +236,7 @@
     padding: 5px;
     // stylelint-disable-next-line font-family-no-missing-generic-family-keyword
     font-family: "Font Awesome 5 Free";
-    @include font-size(60px);
+    @include font-size.font-size(60px);
     font-weight: 900;
     line-height: 1;
     color: #fff;
@@ -287,15 +290,15 @@
     display: block;
     max-width: 100%;
     padding: .25rem;
-    @include font-size(.9375rem);
+    @include font-size.font-size(.9375rem);
     color: #fff;
     text-align: center;
     background-color: rgba(0, 0, 0, .65);
-    @include border-radius(.25rem);
+    @include border.border-radius(.25rem);
     transform: translateX(-50%);
 }
 .player-fulldisplay .player-caption-display {
     bottom: 5rem;
     padding: .5rem 1rem;
-    @include font-size(1.25rem);
+    @include font-size.font-size(1.25rem);
 }
