--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,36 +1,36 @@
 // Toggles
 // Used in conjunction with global variables to enable certain theme features.
-@use "mixins/box-shadow";
-@use "mixins/font-size";
-@use "mixins/gradients";
-@use "mixins/transition";
+@forward "mixins/box-shadow";
+@forward "mixins/font-size";
+@forward "mixins/gradients";
+@forward "mixins/transition";
 
 // Utilities
-@use "mixins/border";
-@use "mixins/breakpoints";
-@use "mixins/hover";
-@use "mixins/images";
-@use "mixins/screen-reader";
-@use "mixins/reset-text";
-@use "mixins/text-emphasis";
-@use "mixins/text-truncate";
-@use "mixins/visibility";
+@forward "mixins/border";
+@forward "mixins/breakpoints";
+@forward "mixins/hover";
+@forward "mixins/images";
+@forward "mixins/screen-reader";
+@forward "mixins/reset-text";
+@forward "mixins/text-emphasis";
+@forward "mixins/text-truncate";
+@forward "mixins/visibility";
 
 // Components
-@use "mixins/alert";
-@use "mixins/backdrop";
-@use "mixins/buttons";
-@use "mixins/caret";
-@use "mixins/divider";
-@use "mixins/forms";
-@use "mixins/lists";
-@use "mixins/pagination";
-@use "mixins/switch";
-@use "mixins/tables";
-@use "mixins/modal";
+@forward "mixins/alert";
+@forward "mixins/backdrop";
+@forward "mixins/buttons";
+@forward "mixins/caret";
+@forward "mixins/divider";
+@forward "mixins/forms";
+@forward "mixins/lists";
+@forward "mixins/pagination";
+@forward "mixins/switch";
+@forward "mixins/tables";
+@forward "mixins/modal";
 
 // Layout
-@use "mixins/clearfix";
-@use "mixins/containers";
-@use "mixins/grid";
-@use "mixins/float";
+@forward "mixins/clearfix";
+@forward "mixins/containers";
+@forward "mixins/grid";
+@forward "mixins/float";
