Docsearch: Set cursor to auto

--- a/site/assets/4.3/scss/_docsearch.scss
+++ b/site/assets/4.3/scss/_docsearch.scss
@@ -15,6 +15,7 @@
     --docsearch-muted-color: #{$text-muted};
     --docsearch-hit-shadow: none;
     z-index: 2000;
+    cursor: auto;
 }
 
 .DocSearch-Button {
