--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -280,13 +280,12 @@
                         margin-left: -$list-border-width;
                         border-top-width: $list-border-width;
 
-                        &:first-child {
-                            margin-left: 0;
+                        &:first-child:not(:last-child) {
                             @include border-top-end-radius(0);
                             @include border-start-radius(inherit);
                         }
 
-                        &:last-child {
+                        &:last-child:not(:first-child) {
                             @include border-bottom-start-radius(0);
                             @include border-end-radius(inherit);
                         }
