Docs: Update search to allow use on local dev

--- a/site/_includes/4.3/partials/algolia.html
+++ b/site/_includes/4.3/partials/algolia.html
@@ -27,6 +27,8 @@
                     item.url = item.url.replace(/#content$/, '');
                     item.anchor = null;
                 }
+                // Strip production hostname for local development
+                item.url = item.url.replace(/^https:\/\/figuration.org/, '');
                 return item;
             });
         },
