--- a/site/assets/4.3/scss/_example.scss
+++ b/site/assets/4.3/scss/_example.scss
@@ -54,8 +54,7 @@
 
     // Progress
     > .progress {
-        + .progress,
-        + .btn {
+        + .progress {
             margin-top: 1rem;
         }
     }
